--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   permission_handler: ^11.3.0
   flutter_launcher_icons: ^0.14.4
   fl_chart: ^0.66.0
+  android_intent_plus: ^6.0.0
+  device_info_plus: ^12.3.0
 
 dev_dependencies:
   flutter_test:
