--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
+            android:showWhenLocked="true"
+            android:turnScreenOn="true"
             android:windowSoftInputMode="adjustResize">
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
@@ -38,6 +40,18 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!-- Explicitly adding receivers for better reliability after reboot -->
+        <receiver android:name="me.carda.awesome_notifications.receivers.DismissibleNotificationReceiver"
+            android:enabled="true"
+            android:exported="false" />
+        <receiver android:name="me.carda.awesome_notifications.receivers.ScheduledNotificationReceiver"
+            android:enabled="true"
+            android:exported="false"
+            android:directBootAware="true" />
+        <receiver android:name="me.carda.awesome_notifications.receivers.KeepAliveReceiver"
+            android:enabled="true"
+            android:exported="false" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
